add groovy grab